# magpy

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  LOp.py  README.md  __init__.py  example.ipynb  magpy.py  meta.yaml  pyproject.toml
magpy/: HOp.py  QSystem.py  __init__.py  _device.py  methods.py
magpy/core/: __init__.py  function_product.py  hamiltonian_operator.py  linalg.py  matrices.py  pauli_string.py  sigma.py
magpy/solver/: __init__.py  _gl.py  _gl3_quadrature_constants.py  magnus.py  system.py
magpy/test/core/: test_function_product.py  test_hamiltonian_operator.py  test_pauli_string.py  test_sigma.py
requirements/: base.txt  dev.txt
tutorials/: function_product.ipynb  gpu_computing.ipynb  pauli_string.ipynb
tutorials/core/: function_product.ipynb  hamiltonian_operator.ipynb  pauli_string.ipynb  quickstart.ipynb  quickstart_core.ipynb
tutorials/solver/: simulating.ipynb
