[project]
name = "magpy"
version = "1.0.0"
description = "Magnus based time-integration for spins and qubits under a magnetic field."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
    { name = "Danny Goodacre", email = "djrg20@bath.ac.uk" },
    { name = "Pranav Singh", email = "ps2106@bath.ac.uk" }
]

dependencies = [
    "numpy>=1.16.5",
    "scipy>=1.7"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = [
    "quantum", "spin", "Magnus",
]

[project.urls]
homepage = "https://github.com/brownadder/magpy"
repository = "https://github.com/brownadder/magpy"

[build-system]
requires = ["setuptools>=44.0.0"]
build-backend = "setuptools.build_meta"